# Student-Performance-Predictor

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: EDA.ipynb  Model_Training.ipynb
reports/figures/: classification_model_comparison.csv  regression_model_comparison.csv
src/: __init__.py  feature_engineering.py  predict.py  preprocessing.py  train.py  utils.py
