[project]
name = "student-performance-predictor"
version = "1.0.0"
description = "End-to-end ML project for final score regression and pass/fail classification."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Aditya Verma" }]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]
